@@ -289,6 +289,7 @@ Optionally, add the following:
 
 cscript		SITE[:space:]NUKE	post	/bin/cleanup
 cscript		SITE[:space:]WIPE	post	/bin/cleanup
+cscript		RETR			post	/bin/dl_speedtest
 
 site_cmd	RESCAN			EXEC	/bin/rescan
 custom-rescan	!8	*
@@ -376,6 +377,10 @@ scripts. Here's a short description of each compiled binary:
     command.
     How to test: chroot /glftpd /bin/postdel "DELE /site/path/to/filename"
  
+  - dl_speedtest - used to measure download speeds. It will write the output
+    to glftpd.log only.
+    How to test: chroot /glftpd /bin/dl_speedtest "RETR /site/speedtest/file"
+
   - ng-undupe - Removes entry in dupelog after a file fails sfv check.
     How to test: chroot /glftpd /bin/ng-undupe filename
   
